<resources>
    <string name="app_name">Quiz</string>
    <string name="title_activity_user_main">UserMain</string>
    <string name="title_user_contests">Static Contests</string>
    <string name="title_user_dynamic">Dynamic Contests</string>
    <string name="title_user_leaderboard">Leaderboard</string>

    <string name="category">Choose a category</string>

    <string-array name="category_arrays">
        <item>Select</item>
    </string-array>
    <string name="contest_type_spinner">Quiz</string>
    <string name="ContestType">Choose Contest Type</string>

    <string-array name="contest_type_arrays">
        <item>Select</item>
        <item>static</item>
        <item>dynamic</item>
    </string-array>
    <string name="contest_create_base_url">http://10.177.2.201:8080/contest/</string>
    <string name="get_categories_base_url">http://10.177.2.201:8081/question/</string>
    <string name="title_activity_main">MainActivity</string>
    <string name="section_format">Hello World from section: %1$d</string>
    <string name="hello_world">Hello world!</string>
    <string name="drawer_open">Open navigation drawer</string>
    <string name="drawer_close">Close navigation drawer</string>


    <string-array name="navigation_drawer_items_array">
        <item>Connect</item>
        <item>Fixtures</item>
        <item>Table</item>
    </string-array>
    <string name="title_activity_navigation_">Navigation_Activity</string>
    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>
    <string name="nav_header_title">Android Studio</string>
    <string name="nav_header_subtitle">android.studio@android.com</string>
    <string name="nav_header_desc">Navigation header</string>


    <!--Nilay's strings-->

    <string name="action_settings">Settings</string>
    <string name="title_activity_user">User</string>
    <string name="title_section1">Section 1</string>
    <string name="title_section2">Section 2</string>
    <string name="title_section3">Section 3</string>

    <string name="base_url_category">http://10.177.2.201:8081/question/</string>
    <string name="base_url_contest">http://10.177.2.201:8080/</string>
    <string name="shared_pref_fcm_file">fcm_file</string>

    <string name="action_example">Example action</string>
    <string name="title_activity_contest_names">ContestNames</string>
    <string name="title_activity_dynamic_name">Dynamic Contests</string>


    <string name="contest_name">Contest Name</string>
    <string name="contest_duration">Duration - </string>
    <string name="contest_no_of_questions">Questions - </string>
    <string name="contest_bonus">Bonus - </string>
    <string name="title_activity_game">GameActivity</string>
    <string name="title_activity_test">Test</string>
    <string name="title_activity_dynamic_game">DynamicGame</string>
</resources>

