<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout
    xmlns:android="http://schemas.android.com/apk/res/android" android:layout_width="match_parent"
    android:layout_height="wrap_content">
    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:id="@+id/contest_name"
        android:text="@string/contest_name"
        android:textSize="24dp"
        android:textColor="@color/textColor"
        android:gravity="center"/>
    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textColor="@color/colorPrimary"
        android:text="@string/contest_no_of_questions"
        android:id="@+id/no_of_questions"
        android:layout_below="@+id/contest_name"/>

    <TextView
        android:id="@+id/bonus"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/contest_bonus"
        android:textColor="@color/colorPrimary"
        android:layout_below="@+id/contest_name"
        android:layout_alignParentRight="true"/>

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/contest_duration"
        android:textColor="@color/colorPrimary"
        android:id="@+id/duration"
        android:layout_below="@+id/no_of_questions"/>

</RelativeLayout>